@@ -67,49 +67,50 @@ function xnewsletter_plugin_getdata_csv($cat_id, $action_after_read, $limitCheck
 
     if (($handle = fopen($file, "r")) !== false) {
         while (($lineArray = fgetcsv($handle, 4000, $delimiter)) !== false) {
-        if ($header == true || $i == 0) {
-            // remove header line
-            // NOP
-        } else {
-            $email     = $lineArray[0];
-            $sex       = isset($lineArray[1]) ? $lineArray[1] : "";
-            $firstname = isset($lineArray[2]) ? $lineArray[2] : "";
-            $lastname  = isset($lineArray[3]) ? $lineArray[3] : "";
+            if ($header == true && $i == 0) {
+                // remove header line
+                // NOP
+            } else {
+                $email     = $lineArray[0];
+                $sex       = isset($lineArray[1]) ? $lineArray[1] : "";
+                $firstname = isset($lineArray[2]) ? $lineArray[2] : "";
+                $lastname  = isset($lineArray[3]) ? $lineArray[3] : "";
+                if (!empty($email)) {
+                    $subscr_id = xnewsletter_pluginCheckEmail($email);
+                    $catsubscr_id = xnewsletter_pluginCheckCatSubscr($subscr_id, $cat_id);
 
-            if ($email != "") {
-                $subscr_id = xnewsletter_pluginCheckEmail($email);
-                $catsubscr_id = xnewsletter_pluginCheckCatSubscr($subscr_id, $cat_id);
-
-                if ($skipCatsubscrExist == true && $catsubscr_id > 0) {
-                    //skip existing subscriptions
-                    // NOP
-                } else {
-                    $current_cat_id = $catsubscr_id > 0 ? 0 : $cat_id;
-                    $importObj = $xnewsletter->getHandler('import')->create();
-                    $importObj->setVar('import_email', $email);
-                    $importObj->setVar('import_sex', $sex);
-                    $importObj->setVar('import_firstname', $firstname);
-                    $importObj->setVar('import_lastname', $lastname);
-                    $importObj->setVar('import_cat_id', $current_cat_id);
-                    $importObj->setVar('import_subscr_id', $subscr_id);
-                    $importObj->setVar('import_catsubscr_id', $catsubscr_id);
-                    $importObj->setVar('import_status', $import_status);
-                    if (!$xnewsletter->getHandler('import')->insert($importObj)) {
-                        echo $importObj->getHtmlErrors();
-                        exit();
-                    }
+                    if ($skipCatsubscrExist == true && $catsubscr_id > 0) {
+                        //skip existing subscriptions
+                        // NOP
+                    } else {
+                        $current_cat_id = $catsubscr_id > 0 ? 0 : $cat_id;
+                        $importObj = $xnewsletter->getHandler('import')->create();
+                        $importObj->setVar('import_email', $email);
+                        $importObj->setVar('import_sex', $sex);
+                        $importObj->setVar('import_firstname', $firstname);
+                        $importObj->setVar('import_lastname', $lastname);
+                        $importObj->setVar('import_cat_id', $current_cat_id);
+                        $importObj->setVar('import_subscr_id', $subscr_id);
+                        $importObj->setVar('import_catsubscr_id', $catsubscr_id);
+                        $importObj->setVar('import_status', $import_status);
+                        if (!$xnewsletter->getHandler('import')->insert($importObj)) {
+                            echo $importObj->getHtmlErrors();
+                            exit();
+                        }
 //                    $sql = "INSERT INTO {$table_import} (import_email, import_sex, import_firstname, import_lastname, import_cat_id, import_subscr_id, import_catsubscr_id, import_status)";
 //                    $sql .= " VALUES ('$email', '$sex', '$firstname', '$lastname', $current_cat_id, $subscr_id, $catsubscr_id, $import_status)";
-//                    $result_insert = $xoopsDB->query($sql) || die ("MySQL-Error: " . mysql_error());
-                    ++$j;
+//                    $result_insert = $xoopsDB->query($sql) || die ("MySQL-Error: " . $xoopsDB->error());
+                        ++$j;
+                    }
                 }
             }
-        }
-        ++$i;
-        if ($j == 100000) break; //maximum number of processing to avoid cache overflow
-        if ($limitCheck > 0 && $j == $limitCheck) $import_status = 0;
+            ++$i;
+            if ($j == 100000) break; //maximum number of processing to avoid cache overflow
+            if ($limitCheck > 0 && $j == $limitCheck) $import_status = 0;
         }
     fclose($handle);
+    } else {
+        exit("FILE NOT FOUND");
     }
 
     return $j;
