@@ -69,8 +69,8 @@ function xnewsletter_plugin_getdata_subscribers($cat_id, $action_after_read, $li
     $sql = "SELECT `user_email`, `user_name`";
     $sql .= " FROM " . $xoopsDB->prefix("subscribers_user");
     $sql .= " WHERE (`user_email` is not null and not(`user_email`=''))";
-    if(!$result_users = $xoopsDB->query($sql)) die ("MySQL-Error: " . mysql_error());
-    while ($lineArray = mysql_fetch_array($result_users)) {
+    if(!$result_users = $xoopsDB->query($sql)) die ("MySQL-Error: " . $xoopsDB->error());
+    while ($lineArray = $xoopsDB->fetchBoth($result_users)) {
         ++$i;
         $email     = $lineArray[0];
         $sex       = "";
@@ -99,7 +99,7 @@ function xnewsletter_plugin_getdata_subscribers($cat_id, $action_after_read, $li
             }
 //            $sql = "INSERT INTO {$table_import} (import_email, import_sex, import_firstname, import_lastname, import_cat_id, import_subscr_id, import_catsubscr_id, import_status)";
 //            $sql .= " VALUES ('$email', '$sex', '$firstname', '$lastname', $currcatid, $subscr_id, $catsubscr_id, $import_status)";
-//            $result_insert = $xoopsDB->query($sql) || die ("MySQL-Error: " . mysql_error());
+//            $result_insert = $xoopsDB->query($sql) || die ("MySQL-Error: " . $xoopsDB->error());
             ++$j;
         }
         ++$i;
