@@ -1,5 +1,9 @@
 Version 1.3     NOT RELEASED
 -------------------------------
+ - fixed: bug in XoopsUser import utility when retrieving data from database (zyspec)
+ - fixed: bug in CSV import utility where class was called incorrectly (zyspec)
+ - fixed: bug in import utility where category wasn't being preselected (zyspec)
+ - changed: mysql_* function calls with XoopsDatabase equiv methods (zyspec)
  - changed: MySQL install to remove setting defaults on text columns (zyspec)
  - only display link to list categories in ./admin/cat.php if categories exist (zyspec)
  - only display link to list subscribers in ./admin/cat.php if subscribers exist (zyspec)
